# PJATK_THESIS_PROJECT

./: .gitignore  Makefile  README.md  data.dvc  dvc.yaml  dvclive.json  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cml.yaml  cml_az.yaml  cml_gh.yaml  infra.yaml
_tools/: manage_dependencies.sh  requirements.txt  test.sh
data/raw/: .gitignore  aclImdb.dvc
dvclive/: report.html
dvclive/scalars/eval/: accuracy.tsv  auc.tsv  loss.tsv  mean_squared_error.tsv
dvclive/scalars/train/: accuracy.tsv  auc.tsv  loss.tsv  mean_squared_error.tsv
infrastructure/: Makefile  azurek8s  dev.tfvars  kubectl_config.sh  local.tfvars  local_config.sh  main.tf  prod.tfvars  providers.tf  terraform.tfplan  variables.tf
models/: .gitignore
models/mlops-thesis-text-classification/: keras_metadata.pb  saved_model.pb
models/mlops-thesis-text-classification/variables/: variables.index
src/: config.py  evaluate.py  featurize.py  load_data.sh  metrics.json  params.yaml  prepare.py  train.py
src/experiments/: main.py
