[tool.poetry]
name = "thesis-project"
version = "0.1.0"
description = "Project made for master thesis on PJATK University."
authors = ["Mateusz Więckowski <mr.mateuszwieckowski@gmail.com>"]
license = "GPL2"

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.24.0"
mlem = "onnx"
onnx = "^1.12.0"
onnxruntime = "^1.12.1"
gto = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
